gave nav bar a fixed position. and a high z-index

--- a/client/src/styles/_statsDisplay.scss
+++ b/client/src/styles/_statsDisplay.scss
@@ -24,7 +24,7 @@
 
 .stats-container h3{
     font-size: 2em;
-    color: blue;/* 
+    color: rgb(152, 152, 255);/* 
     margin-right: 8vw; */
     display: flex;
     justify-content: center;
@@ -33,9 +33,7 @@
 
 }
 
-.stats-container div{/* 
-    border: 1px solid red;
-    color: red; */
+.stats-container div{
     font-size: 1.5em;
     padding: 5px;
     
@@ -45,13 +43,14 @@
 
 .profile-stats-label{
     text-decoration: underline;
-    
+    font-weight: 900;
 }
 
 .profile-stats-value{
     display: flex;
     justify-content: flex-end;
-    color: rgb(73, 0, 73);
+    color: rgb(177, 68, 177);
+    font-weight: 900;
 
     
 }
